test/functions/resolution/errors/testBadCallCandidates.5-all.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:88: error: unresolved call 'owned D.bar("hi")'
testBadCallCandidates.chpl:36: note: this candidate did not match: D.bar(x: int)
testBadCallCandidates.chpl:88: note: because actual argument #1 with type 'string'
testBadCallCandidates.chpl:36: note: is passed to formal 'x: int(64)'
testBadCallCandidates.chpl:88: note: other candidates are:
testBadCallCandidates.chpl:8: note:   C.bar(x: string)
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
testBadCallCandidates.chpl:65: note:   bar(x: D)
